# omni-asr-distil

./: .gitignore  README.md  pyproject.toml
configs/stage1/: s_large_512.yaml  s_large_512_1B.yaml  s_medium_384.yaml  s_small_256.yaml
configs/stage2/: stream_320ms.yaml  stream_480ms.yaml  stream_dct.yaml  stream_dct_large.yaml
scripts/: eval_rvg1.py  eval_stage2_all.sh  evaluate.py  generate_latex_table.py  run_stage1.py  run_stage2.py
slurm/: eval_rvg1.sh  stage1.sh  stage2.sh  test_multigpu.sh
src/omni_asr_distil/: __init__.py  data.py  dataset_config.py  distill_criterion.py  distill_recipe.py  distill_train_unit.py  hidden_extractor.py  losses.py  streaming.py  student_config.py  student_factory.py  wer_utils.py
